First commited as before_34716_rev7